# BTS_Project_Ver2

./: 1.BTS_FreeRTOS_Project.code-workspace
1.BTS_FreeRTOS_Project/MDK/: gpio.uvguix.nguye  gpio.uvguix.nhanma  gpio.uvguix.nvan0  gpio.uvoptx  gpio.uvprojx
1.BTS_FreeRTOS_Project/USER/: bts_adc.c  bts_adc.h  bts_automatic_control.c  bts_config_gpio.c  bts_config_gpio.h  bts_convert.h  bts_debug_creat.c  bts_debug_creat.h  bts_device.c  bts_device.h  bts_event_define.h  bts_frame_message.c  bts_frame_message.h  bts_get_message.c  bts_get_message.h  bts_message.c  bts_message.h  bts_mutex_define.h  bts_queue_define.h  bts_sensor_airconditioner.c  bts_sensor_airconditioner.h  bts_sensor_door.c  bts_sensor_ntc.c  bts_sensor_ntc.h  bts_sensor_smoke.c  bts_sensor_smoke.h  bts_sensor_water.c  bts_sys.c  bts_sys.h  bts_task_io.c  bts_task_io.h  bts_task_msg_transmission.c  bts_task_msg_transmission.h  bts_task_sys.c  bts_task_sys.h  bts_uart.c  bts_uart.h  bts_uart3.c  bts_uart3.h  main.c
1.BTS_Project_Keil/MDK/: gpio.uvguix.nvan0  gpio.uvoptx  gpio.uvprojx
1.BTS_Project_Keil/USER/: bts_adc.h  bts_automatic_control.h  bts_config_gpio.c  bts_device.c  bts_device.h  bts_event_define.h  bts_sys.h  (+21 more)
TEST/: BTS_Message_Version2 - Shortcut.lnk
TaiLieu/uart/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  run.sh
TaiLieu/uart/lib/: bts_frame_message.cpp  bts_frame_message.h  bts_get_message.cpp  bts_get_message.h  main.cpp  serialport.cpp  serialport.h
uart/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  uart_frame
(+866 files in other folders)
